--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 env/
 venv/
 
+# Environment variables
+.env
+.env.*
+!.env.example
+
 # Django migrations
 /**/migrations/*.py
 !/**/migrations/__init__.py
